Fix product build on Windows+Arm64

XMLWordPrintable

    • b26
    • aarch64
    • windows

        Fix this warning:

        C:\work\openjdk-jdk\src\hotspot\cpu\aarch64\assembler_aarch64.hpp(508): error C2220: the following warning is treated as an error
        C:\work\openjdk-jdk\src\hotspot\cpu\aarch64\assembler_aarch64.hpp(508): warning C4390: ';': empty controlled statement found; is this the intent?

              Assignee:
              Bernhard Urban-Forster
              Reporter:
              Bernhard Urban-Forster
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: