8256633: Fix product build on Windows+Arm64

Reviewed-by: shade